--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "church-app-2",
   "version": "1.0.0",
-  "main": "app.js",  
+  "main": "app.js",
   "scripts": {
     "start": "node --openssl-legacy-provider app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "formidable": "^3.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.3",
@@ -24,7 +25,7 @@
     "qs": "^6.12.3",
     "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
-    "web-push": "^3.6.7", 
+    "web-push": "^3.6.7",
     "ws": "^8.18.0"
   },
   "description": ""
