--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^7.2.0",
     "formidable": "^3.5.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.3",
